# planl-backup-kit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-build.yml  tests.yml
docs/: README.md  docker-workflow.md  workflow-summary.md
elasticsearch/: .dockerignore  Dockerfile  README.md  __main__.py  cleanup.py  config.yaml  docker-compose.yml  env.example  main.py  pyproject.toml  restore.py  snapshot.py
elasticsearch/.github/workflows/: docker-build.yml  elasticsearch-build.yml
elasticsearch/docs/: cleanup.md  logging.md  restore_usage.md
elasticsearch/example/: example-restore-job.yaml  k8s-cronjob.yaml  snapshot-job-template.yaml
elasticsearch/src/: __init__.py
elasticsearch/src/cli/: __init__.py  main.py
elasticsearch/src/core/: __init__.py  restore.py  rotation.py  snapshot.py
elasticsearch/src/models/: __init__.py  config.py
elasticsearch/src/utils/: __init__.py  config_loader.py  logging.py
elasticsearch/tests/: conftest.py  test_cleanup_manager.py  test_core_restore.py  test_core_rotation.py  test_core_snapshot.py  test_restore_manager.py  test_snapshot.py  test_snapshot_manager.py
mongodb/: Dockerfile  main.py  pyproject.toml
mongodb/src/: __init__.py
mongodb/src/cli/: __init__.py  main.py
mysql/: main.py  pyproject.toml
mysql/src/: __init__.py
mysql/src/cli/: __init__.py  main.py
postgresql/: Dockerfile  main.py  pyproject.toml
postgresql/src/: __init__.py
postgresql/src/cli/: __init__.py  main.py
