[project]
name = "planl-backup-kit-elasticsearch"
version = "0.1.0"
description = "Elasticsearch snapshot and restore toolkit with S3 support"
# readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "PlanLX Team", email = "sloudy@gmail.com"}
]
keywords = ["elasticsearch", "snapshot", "restore", "s3", "aws"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "elasticsearch>=8.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
es-backup = "cli:main"
# es-cleanup = "cleanup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# 新增 dependency-groups 配置
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.9.0",
    "mypy>=1.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "E402",  # module level import not at top of file (for development scripts)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"main.py" = ["E402"]
"snapshot.py" = ["E402"]

[tool.black]
target-version = ['py312']
line-length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.uv.index]]
url = "https://gzv-nex.piston.ink/repository/python-group/simple"
default = true

